alignment fixes

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     color: #FFF4E6;
 }
 
+.noOpacity {
+    opacity: 1;
+}
+
 .bold {
     font-weight: bold;
 }
@@ -48,7 +52,7 @@ body {
     background-size:contain;
     background-position:center;*/
 
-background: url("home.jpg") no-repeat center center fixed; 
+background: url("images/home.jpg") no-repeat center center fixed; 
   -webkit-background-size: auto 100%;
   -moz-background-size: auto 100%;
   -o-background-size: auto 100%;
@@ -63,12 +67,12 @@ background: url("home.jpg") no-repeat center center fixed;
   
   .opacityCover {
       width: 100%;
-      height: 100%;
+      height: 130%;
       background-color: #333;
       opacity: 0.7;
       position: fixed;
       z-index: -1;
-      margin-top: -5%;
+      margin-top: -15%;
   }
   
   .responsiveBoarder {
@@ -89,9 +93,11 @@ background: url("home.jpg") no-repeat center center fixed;
   }
   
   .profileBox {
-      background-color: #fff;
+      background-color: #1478DB;
       height: 120px;
       width: 300px;
+      text-align: center;
+      padding: 0 20px 0 20px;
   }
   
   .profilePic {
@@ -105,17 +111,50 @@ background: url("home.jpg") no-repeat center center fixed;
       position: relative;
       top: 50%;
     transform: translateY(-50%);
-      
+    float: left;
   }
-  .feature-box {
-    background-color: #fff;
-    width: 32%;
-    height: 30%;
-    margin: 7% 0 0 0;
-    /*display: inline-block;*/
-    /*word-spacing: -1;*/
+  .profileText {
+      position: relative;
+      top: 50%;
+    transform: translateY(-50%);
   }
   
+  .profileText ,h2 {
+      font-size: 20px;
+  }
+
+  .featureContainer {
+      position: absolute;
+      width: 80%;
+      height: 30%;
+      left: auto;
+      right: auto;
+      top: 60%;
+  }
+  
+  .feature-box {
+    width: 32%;
+    height: 100%;
+    background-color: #fff;
+    position: relative;
+  }
+  
+  .feature-box img {
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      position: absolute;
+  }
+  
+  .feature-box div {
+      width: 100%;
+      height: 12%;
+      position: relative;
+      text-align: center;
+      opacity: 0.5;
+      background-color: #1478DB;
+      /*background: rgba(20,120,219,0.5);*/
+  }
   .featureOne {
      margin-right:2%;
      float: left;
